--- a/Project.toml
+++ b/Project.toml
@@ -1,5 +1,7 @@
 [deps]
+Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
 DrWatson = "634d3b9d-ee7a-5ddf-bec9-22491ea816e1"
+GameZero = "9da27670-f782-11e9-1da1-f53579315bfe"
 PlaymatSimulator = "e5f19dc6-78e9-41ab-ba95-fec0547b5fb9"
 Pluto = "c3e4b0f8-55cb-11ea-2926-15256bba5781"
 PlutoUI = "7f904dfe-b85e-4ff6-b463-dae2292396a8"
