--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,7 @@ Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
 DrWatson = "634d3b9d-ee7a-5ddf-bec9-22491ea816e1"
 GameZero = "9da27670-f782-11e9-1da1-f53579315bfe"
 HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
+ImageFiltering = "6a3955dd-da59-5b1f-98d4-e7296123deb5"
 ImageTransformations = "02fcd773-0e25-5acc-982a-7f6622650795"
 Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
@@ -10,3 +11,4 @@ PlaymatSimulator = "e5f19dc6-78e9-41ab-ba95-fec0547b5fb9"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Pluto = "c3e4b0f8-55cb-11ea-2926-15256bba5781"
 PlutoUI = "7f904dfe-b85e-4ff6-b463-dae2292396a8"
+Rotations = "6038ab10-8711-5258-84ad-4b1120ba62dc"
